# algorithm

./: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
include/bfs/: BFS.md
include/binarySearch/: index.hpp  二分.md
include/dfs/: DFS.md  DFS2.md  index.hpp
include/difference/: index.hpp
include/dijkstra/: index.hpp
include/dp/: index.hpp  动态规划.md  动态规划与背包算法讲解.md
include/fenwick/: index.hpp
include/lcs/: index.hpp
include/manacher/: index.hpp
include/prefixSum/: index.hpp  前缀和差分.md  评价与优化.md
include/segmentTree/: index.hpp
include/twoPointers/: 双指针.md
include/unionFind/: index.hpp  并查集.md
include/utils/: fstr.hpp  fstr.inl  utils.hpp
src/BFS/: index.hpp  template.cpp
src/DFS/: dfs.cpp  index.hpp  template.cpp
src/Dijkstra/: dijkstra.cpp  index.hpp  template.cpp
src/Floyd/: index.hpp
src/KMP/: template.cpp
src/LCS/: lcs.cpp
src/manacher/: template.cpp
src/utils/: utils.hpp  utils.inl
src/二分查找/: binarySearch.cpp  index.hpp  template.cpp
src/前缀和/: index.hpp  prefixSum.cpp
src/动态规划/: dynamicProgramming.cpp  template.cpp
src/双指针/: index.hpp  twoPointers.cpp
src/差分算法/: difference.cpp  index.hpp
src/并查集/: template.cpp  unionFind.cpp
src/归并排序/: index.hpp
src/快速排序/: index.hpp
src/树状数组/: fenwick.cpp  template.cpp
src/线段树/: segmentTree.cpp  template.cpp
